--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "storybook dev",
+    "dev": "storybook dev -p 9009",
     "build": "rimraf ./dist && tspc -p ./tsconfig.build.json && swc ./dist -d .",
     "prettier": "prettier --check ./.storybook ./src",
     "prettier:fix": "prettier --write ./.storybook ./src",
@@ -18,32 +18,33 @@
     }
   },
   "devDependencies": {
+    "@joshwooding/vite-plugin-react-docgen-typescript": "^0.6.0",
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-interactions": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
     "@storybook/react": "^8.6.12",
+    "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@swc/cli": "^0.7.3",
     "@swc/core": "^1.11.24",
-    "@types/react-dom": "^19.1.3",
     "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.26.0",
     "rimraf": "^6.0.1",
     "storybook": "^8.6.12",
     "ts-patch": "^3.3.0",
-    "typescript-transform-paths": "^3.5.5",
     "typescript": "^5.8.3",
-    "vite-tsconfig-paths": "^5.1.4",
-    "vite": "^6.3.5"
+    "typescript-transform-paths": "^3.5.5",
+    "vite": "^6.3.5",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
     "@tailwindcss/postcss": "^4.1.5",
+    "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "react": "^19.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.5"
   }
