--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "prettier": "prettier --check ./.storybook ./src",
     "prettier:fix": "prettier --write ./.storybook ./src",
     "eslint": "eslint ./.storybook ./src",
-    "eslint:fix": "eslint --fix ./.storybook ./src"
+    "eslint:fix": "eslint --fix ./.storybook ./src",
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic"
   },
   "exports": {
     ".": {
@@ -18,6 +20,7 @@
     }
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^3.2.6",
     "@joshwooding/vite-plugin-react-docgen-typescript": "^0.6.0",
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
     "@storybook/addon-essentials": "^8.6.12",
@@ -27,11 +30,12 @@
     "@storybook/react": "^8.6.12",
     "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
-    "@swc/cli": "^0.7.3",
+    "@swc/cli": "^0.7.4",
     "@swc/core": "^1.11.24",
-    "@types/react": "^19.1.2",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
     "@vitejs/plugin-react": "^4.4.1",
+    "chromatic": "^11.28.2",
     "eslint": "^9.26.0",
     "rimraf": "^6.0.1",
     "storybook": "^8.6.12",
