feat (Theme): add fallback colors and no-theme example;
Added fallback color variables in theme.css to use neutral colors when theme-specific colors are not defined. Included a NoThemeExample story to demonstrate styling without a custom theme.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@nolva/nolva-components",
+  "name": "@rentalhost/nolva-components",
   "version": "1.0.0",
   "private": true,
   "type": "module",
