--- a/package.json
+++ b/package.json
@@ -21,14 +21,13 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^3.2.6",
-    "@joshwooding/vite-plugin-react-docgen-typescript": "^0.6.0",
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
     "@storybook/addon-essentials": "^8.6.12",
     "@storybook/addon-interactions": "^8.6.12",
     "@storybook/blocks": "^8.6.12",
     "@storybook/csf": "^0.1.13",
+    "@storybook/nextjs": "^8.6.12",
     "@storybook/react": "^8.6.12",
-    "@storybook/react-vite": "^8.6.12",
     "@storybook/test": "^8.6.12",
     "@swc/cli": "^0.7.5",
     "@swc/core": "^1.11.24",
@@ -37,6 +36,7 @@
     "@vitejs/plugin-react": "^4.4.1",
     "chromatic": "^11.28.2",
     "eslint": "^9.26.0",
+    "next": "^15.3.2",
     "react-icons": "^5.5.0",
     "rimraf": "^6.0.1",
     "storybook": "^8.6.12",
@@ -47,10 +47,10 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.2.0",
-    "tailwindcss": "^4.1.5"
+    "tailwindcss": "^4.1.6"
   }
 }
