feat (Media): add unified Media component with image, SVG, and local video support;
Implemented a new Media component that conditionally renders MediaImage, MediaSVG, or MediaVideoLocal based on file extension, along with respective components and Storybook stories for usage examples. This enhances media handling consistency and simplifies usage across the application.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
     "useDefineForClassFields": true,
     "paths": {
       "@/*": ["./src/*"],
-      "@storybook/*": ["./.storybook/*"]
+      "@storybook/*": ["./.storybook/*"],
+      "@assets/*": ["./public/assets/*"]
     },
     "plugins": [
       { "transform": "typescript-transform-paths", "afterDeclarations": true }
