--- a/package.json
+++ b/package.json
@@ -23,18 +23,15 @@
     }
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^3.2.6",
+    "@chromatic-com/storybook": "^4.0.0",
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
-    "@storybook/addon-essentials": "^8.6.14",
-    "@storybook/addon-interactions": "^8.6.14",
-    "@storybook/blocks": "^8.6.14",
     "@storybook/csf": "^0.1.13",
-    "@storybook/nextjs": "^8.6.14",
-    "@storybook/react": "^8.6.14",
-    "@storybook/test": "^8.6.14",
+    "@storybook/nextjs": "^9.0.0",
+    "@storybook/react": "^9.0.0",
+    "@storybook/test": "9.0.0-alpha.2",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.11.29",
-    "@types/react": "^19.1.5",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
     "@vitejs/plugin-react": "^4.5.0",
     "barrelsby": "^2.8.1",
@@ -43,7 +40,7 @@
     "next": "^15.3.2",
     "react-icons": "^5.5.0",
     "rimraf": "^6.0.1",
-    "storybook": "^8.6.14",
+    "storybook": "^9.0.0",
     "ts-patch": "^3.3.0",
     "typescript": "^5.8.3",
     "typescript-transform-paths": "^3.5.5",
@@ -51,10 +48,10 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.7",
+    "@tailwindcss/postcss": "^4.1.8",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7"
+    "tailwindcss": "^4.1.8"
   }
 }
