--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@chromatic-com/storybook": "^4.0.0",
     "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
     "@storybook/csf": "^0.1.13",
-    "@storybook/nextjs": "^9.0.0",
-    "@storybook/react": "^9.0.0",
+    "@storybook/nextjs": "^9.0.4",
+    "@storybook/react": "^9.0.4",
     "@storybook/test": "9.0.0-alpha.2",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.11.29",
@@ -36,11 +36,12 @@
     "@vitejs/plugin-react": "^4.5.0",
     "barrelsby": "^2.8.1",
     "chromatic": "^12.0.0",
-    "eslint": "^9.27.0",
-    "next": "^15.3.2",
+    "eslint": "^9.28.0",
+    "next": "^15.3.3",
+    "prettier": "^3.5.3",
     "react-icons": "^5.5.0",
     "rimraf": "^6.0.1",
-    "storybook": "^9.0.0",
+    "storybook": "^9.0.4",
     "ts-patch": "^3.3.0",
     "typescript": "^5.8.3",
     "typescript-transform-paths": "^3.5.5",
