refactor (Media): support static imported media sources;
Added support for static imports of images, SVGs, and local videos by allowing src and posterSrc props to accept objects with a src field. Updated Media and MediaVideoLocal components to handle these cases, improving integration with build tools and storybook examples.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,7 +34,7 @@
     ]
   },
   "include": [
-    "css.d.ts",
+    "references.d.ts",
     ".storybook/**/*.ts",
     ".storybook/**/*.tsx",
     "**/*.ts",
