--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@storybook/react": "^9.0.10",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.12.1",
+    "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
@@ -48,6 +49,7 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
+    "@next/third-parties": "^15.3.3",
     "@tailwindcss/postcss": "^4.1.10",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
