--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "barrelsby": "^2.8.1",
     "chromatic": "^13.0.0",
     "eslint": "^9.29.0",
-    "next": "^15.3.3",
+    "next": "^15.3.4",
     "prettier": "^3.5.3",
     "react-icons": "^5.5.0",
     "rimraf": "^6.0.1",
@@ -49,8 +49,9 @@
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
-    "@next/third-parties": "^15.3.3",
+    "@next/third-parties": "^15.3.4",
     "@tailwindcss/postcss": "^4.1.10",
+    "html-react-parser": "^5.2.5",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "swiper": "^11.2.8",
