refactor (HTMLTransformer): replace HTMLService with HTMLTransformer class;
Removed the legacy HTMLService and introduced a new HTMLTransformer class to provide a more flexible, extensible, and type-safe way to parse and transform HTML into React elements, improving maintainability and enabling customizable tag and text replacements.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -35,6 +35,7 @@
   },
   "include": [
     ".env.d.ts",
+    ".reset.d.ts",
     "references.d.ts",
     ".storybook/**/*.ts",
     ".storybook/**/*.tsx",
