--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "@storybook/react": "^9.0.12",
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.12.1",
+    "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.5.2",
     "barrelsby": "^2.8.1",
-    "chromatic": "^13.0.0",
+    "chromatic": "^13.0.1",
     "eslint": "^9.29.0",
     "next": "^15.3.4",
     "prettier": "^3.5.3",
@@ -51,9 +52,11 @@
   "dependencies": {
     "@next/third-parties": "^15.3.4",
     "@tailwindcss/postcss": "^4.1.10",
-    "html-react-parser": "^5.2.5",
+    "domhandler": "^5.0.3",
+    "htmlparser2": "^10.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "style-to-js": "^1.1.17",
     "swiper": "^11.2.8",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10"
