feat (Media): add support for YouTube remote videos;
Implemented YouTube video support by detecting video ID from URLs and rendering MediaVideoYoutube component; added corresponding story example for remote YouTube videos.

--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@storybook/nextjs": "^9.0.12",
     "@storybook/react": "^9.0.12",
     "@swc/cli": "^0.7.7",
-    "@swc/core": "^1.12.1",
+    "@swc/core": "^1.12.3",
     "@total-typescript/ts-reset": "^0.6.1",
     "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
@@ -53,6 +53,7 @@
     "@next/third-parties": "^15.3.4",
     "@tailwindcss/postcss": "^4.1.10",
     "domhandler": "^5.0.3",
+    "get-video-id": "^4.1.7",
     "htmlparser2": "^10.0.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
