--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "@swc/cli": "^0.7.7",
     "@swc/core": "^1.12.9",
     "@total-typescript/ts-reset": "^0.6.1",
-    "@types/node": "^24.0.8",
+    "@types/node": "^24.0.10",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
     "barrelsby": "^2.8.1",
-    "chromatic": "^13.0.1",
-    "eslint": "^9.30.0",
-    "next": "^15.3.4",
+    "chromatic": "^13.1.2",
+    "eslint": "^9.30.1",
+    "next": "^15.3.5",
     "prettier": "^3.6.2",
     "react-icons": "^5.5.0",
     "rimraf": "^6.0.1",
@@ -46,11 +46,12 @@
     "ts-patch": "^3.3.0",
     "typescript": "^5.8.3",
     "typescript-transform-paths": "^3.5.5",
-    "vite": "^7.0.0",
+    "vite": "^7.0.2",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "dependencies": {
-    "@next/third-parties": "^15.3.4",
+    "@next/third-parties": "^15.3.5",
+    "@rentalhost/nolva-core": "github:rentalhost/nolva-core",
     "@tailwindcss/postcss": "^4.1.11",
     "domhandler": "^5.0.3",
     "get-video-id": "^4.1.7",
