--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rentalhost/nolva-components",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,8 +10,7 @@
     "prettier:fix": "prettier --write ./.storybook ./src",
     "eslint": "eslint ./.storybook ./src",
     "eslint:fix": "eslint --fix ./.storybook ./src",
-    "build-storybook": "storybook build",
-    "chromatic": "npx chromatic"
+    "build-storybook": "storybook build"
   },
   "exports": {
     ".": {
@@ -22,44 +21,42 @@
       "default": "./src/theme.css"
     }
   },
-  "devDependencies": {
-    "@chromatic-com/storybook": "^4.1.2",
-    "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
-    "@storybook/csf": "^0.1.13",
-    "@storybook/nextjs": "^10.0.2",
-    "@storybook/react": "^10.0.2",
-    "@swc/cli": "^0.7.8",
-    "@swc/core": "^1.14.0",
-    "@total-typescript/ts-reset": "^0.6.1",
-    "@types/node": "^24.9.2",
-    "@types/react": "^19.2.2",
-    "@types/react-dom": "^19.2.2",
-    "@vitejs/plugin-react": "^5.1.0",
-    "chromatic": "^13.3.3",
-    "eslint": "^9.38.0",
-    "next": "^16.0.1",
-    "prettier": "^3.6.2",
-    "rimraf": "^6.1.0",
-    "storybook": "^10.0.2",
-    "ts-patch": "^3.3.0",
-    "typescript": "^5.9.3",
-    "typescript-transform-paths": "^3.5.5",
-    "vite": "^7.1.12",
-    "vite-tsconfig-paths": "^5.1.4"
-  },
   "dependencies": {
-    "@next/third-parties": "^16.0.1",
+    "@next/third-parties": "^16.1.6",
     "@rentalhost/nolva-core": "github:rentalhost/nolva-core",
-    "@tailwindcss/postcss": "^4.1.16",
+    "@tailwindcss/postcss": "^4.1.18",
     "domhandler": "^5.0.3",
     "get-video-id": "^4.1.7",
-    "htmlparser2": "^10.0.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
+    "htmlparser2": "^10.1.0",
+    "react": "^19.2.4",
+    "react-dom": "^19.2.4",
     "react-icons": "^5.5.0",
-    "style-to-js": "^1.1.18",
-    "swiper": "^12.0.3",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.16"
+    "style-to-js": "^1.1.21",
+    "swiper": "^12.1.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwindcss": "^4.1.18"
+  },
+  "devDependencies": {
+    "@rheactor/eslint-config-rheactor": "github:rheactor/eslint-config-rheactor",
+    "@storybook/csf": "^0.1.13",
+    "@storybook/nextjs": "^10.2.8",
+    "@storybook/react": "^10.2.8",
+    "@swc/cli": "^0.8.0",
+    "@swc/core": "^1.15.11",
+    "@total-typescript/ts-reset": "^0.6.1",
+    "@types/node": "^25.2.3",
+    "@types/react-dom": "^19.2.3",
+    "@types/react": "^19.2.13",
+    "@vitejs/plugin-react": "^5.1.4",
+    "eslint": "^9.39.2",
+    "next": "^16.1.6",
+    "prettier": "^3.8.1",
+    "rimraf": "^6.1.2",
+    "storybook": "^10.2.8",
+    "ts-patch": "^3.3.0",
+    "typescript-transform-paths": "^3.5.6",
+    "typescript": "^5.9.3",
+    "vite-tsconfig-paths": "^6.1.0",
+    "vite": "^7.3.1"
   }
 }
